--- a/src/main/resources/i18n/lang_en_EN.properties
+++ b/src/main/resources/i18n/lang_en_EN.properties
@@ -72,3 +72,4 @@ user.successfully.unblocked = User successfully unblocked!
 user.is.not.blocked = User is not blocked!
 user.already.blocked = User already blocked.
 update = Update
+tariff = Tariff
