--- a/src/main/resources/i18n/lang_en_EN.properties
+++ b/src/main/resources/i18n/lang_en_EN.properties
@@ -1,4 +1,4 @@
-.balance=Balance
+user.balance=Balance
 user.number=Number
 user.status=Status
 users = users
@@ -27,7 +27,7 @@ info=Info!
 user.no.matches=No users found.
 your.payments=Your payments
 payment.amount=Amount
-date=Date
+date=Subscription Date
 user.successfully.blocked=User successfully blocked.
 select.user=Select user
 enter.user=Enter user number
@@ -73,3 +73,11 @@ user.is.not.blocked = User is not blocked!
 user.already.blocked = User already blocked.
 update = Update
 tariff = Tariff
+services = Services
+user.my.balance = My balance =
+user.included.package = Your included package
+service = Service
+tariff.description = Description
+tariff.name = Tariff
+tariff.cost = Tariff cost
+subscription.date = Subscription date
