--- a/src/main/resources/i18n/lang_en_EN.properties
+++ b/src/main/resources/i18n/lang_en_EN.properties
@@ -61,6 +61,7 @@ create.new=Create new
 request=request
 request.successful.creation = Request created successful.
 create.tariff = Create tariff
+create.user = Create user
 tariff.type.not.exist = Tariff not exist.
 card.create.success = Tariff created successful.
 cancel = Cancel
@@ -81,3 +82,12 @@ tariff.description = Description
 tariff.name = Tariff
 tariff.cost = Tariff cost
 subscription.date = Subscription date
+tariff.plug = Plug tariff
+disable = Disable
+no.money = No money - no honey
+already.add = Tariff is already add
+manager.users = All users
+user.password = Password
+enter.name = Enter Name
+enter.description = Enter description
+enter.cost = Enter cost
