--- a/src/main/resources/i18n/lang_en_EN.properties
+++ b/src/main/resources/i18n/lang_en_EN.properties
@@ -24,60 +24,24 @@ welcome = Welcome,
 your.users=Your users
 user.block=Block
 info=Info!
-user.no.matches=No users found.
-your.payments=Your payments
-payment.amount=Amount
-date=Subscription Date
-user.successfully.blocked=User successfully blocked.
-select.user=Select user
-enter.user=Enter user number
 create=Create
-invalid.user.number=Wrong user number!
 enter.amount=Enter ammount
 invalid.amount.format=Wrong amount!
-user.not.exist=No such user found!
-user.insufficient.funds=Insufficient funds.
-payment.success=Payment completed!
 amount=Amount:
-balance.replenish=Replenish balance
 replenish=Replenish
-replenish.complete=Replenish complete!
 user.unblock=Unblock
-user.confirm=Confirm
-payments=Payments
 invalid.page=Page doesn't exists!
-internal.error=Internal server error!
 currency= UAH
 active.user.exist = Active user exist
-user.close = Close
-payments.history = Payment history
-selected.user=Selected user
-refillable.user = Refillable user
-zero.amount=Zero amount.
 enter = Enter
-user.status.not.active = User status not active.
-user.not.active = user not active.
-create.new=Create new
 request=request
-request.successful.creation = Request created successful.
 create.tariff = Create tariff
 create.user = Create user
-tariff.type.not.exist = Tariff not exist.
-card.create.success = Tariff created successful.
-cancel = Cancel
-user.create.success = User created successful.
 user = User
-no.registered.users = No registered users.
-invalid.user.id = Wrong user!
-user.successfully.unblocked = User successfully unblocked!
-user.is.not.blocked = User is not blocked!
-user.already.blocked = User already blocked.
 update = Update
 tariff = Tariff
 services = Services
-user.my.balance = My balance =
-user.included.package = Your included package
-service = Service
+service = All services
 tariff.description = Description
 tariff.name = Tariff
 tariff.cost = Tariff cost
@@ -91,3 +55,11 @@ user.password = Password
 enter.name = Enter Name
 enter.description = Enter description
 enter.cost = Enter cost
+create.option = Creat option
+definition = Definition
+delete = Delete
+option = Option
+manager.create.service = Create service
+enter.service = Enter name of new service
+tariff.delete = Delete tariff
+service.delete = Delete service
