--- a/src/main/resources/i18n/lang_en_EN.properties
+++ b/src/main/resources/i18n/lang_en_EN.properties
@@ -44,7 +44,7 @@ services = Services
 service = All services
 tariff.description = Description
 tariff.name = Tariff
-tariff.cost = Tariff cost
+tariff.cost = Cost
 subscription.date = Subscription date
 tariff.plug = Plug tariff
 disable = Disable
@@ -63,3 +63,6 @@ manager.create.service = Create service
 enter.service = Enter name of new service
 tariff.delete = Delete tariff
 service.delete = Delete service
+added.by.user = Service has added by user
+change.cost = Change tariff`s cost 
+change =Change
