--- a/src/main/resources/i18n/lang_en_EN.properties
+++ b/src/main/resources/i18n/lang_en_EN.properties
@@ -1,10 +1,6 @@
 user.balance=Balance = 
-user.number=Number
-user.status=Status
 users = users
-action=Action
 create.new.profile=Create new profile
-description = Description of site goes here.
 user.login=Login
 enter.login=Enter your login
 enter.password=Enter your password
@@ -17,11 +13,8 @@ login = Log in
 logout =Log out
 password=Password
 tariff.create = New tariff
-payment.history = Payment history
 signup = Sign up
-title = Internet provider
 welcome = Welcome, 
-your.users=Your users
 user.block=Block
 info=Info!
 create=Create
@@ -48,7 +41,7 @@ tariff.cost = Cost
 subscription.date = Subscription date
 tariff.plug = Plug tariff
 disable = Disable
-no.money = No money - no honey
+no.money = Sorry, You hasn`t enough money 
 already.add = Tariff is already add
 manager.users = All users
 user.password = Password
@@ -66,3 +59,5 @@ service.delete = Delete service
 added.by.user = Service has added by user
 change.cost = Change tariff`s cost 
 change =Change
+previous = previous
+next = next
