PIP-10 Final debug

--- a/src/main/resources/i18n/lang_en_EN.properties
+++ b/src/main/resources/i18n/lang_en_EN.properties
@@ -59,5 +59,9 @@ service.delete = Delete service
 added.by.user = Service has added by user
 change.cost = Change tariff`s cost 
 change =Change
-previous = previous
-next = next
+previous = Previous
+next = Next
+desc.sort = Descending
+asc.sort = Ascending
+sort = Sort by cost: 
+save = Save all tariff into PDF file
