--- a/src/main/resources/i18n/lang_en_EN.properties
+++ b/src/main/resources/i18n/lang_en_EN.properties
@@ -36,7 +36,7 @@ tariff = Tariff
 services = Services
 service = All services
 tariff.description = Description
-tariff.name = Tariff
+tariff.name = Tariff name
 tariff.cost = Cost
 subscription.date = Subscription date
 tariff.plug = Plug tariff
@@ -59,8 +59,6 @@ service.delete = Delete service
 added.by.user = Service has added by user
 change.cost = Change tariff`s cost 
 change =Change
-previous = Previous
-next = Next
 desc.sort = Descending
 asc.sort = Ascending
 sort = Sort by cost: 
