--- a/src/main/resources/i18n/lang_en_EN.properties
+++ b/src/main/resources/i18n/lang_en_EN.properties
@@ -56,7 +56,7 @@ manager.create.service = Create service
 enter.service = Enter name of new service
 tariff.delete = Delete tariff
 service.delete = Delete service
-added.by.user = Service has added by user
+added.by.user = Service has already used by user
 change.cost = Change tariff`s cost 
 change =Change
 desc.sort = Descending
