--- a/src/main/resources/i18n/lang_en_EN.properties
+++ b/src/main/resources/i18n/lang_en_EN.properties
@@ -63,3 +63,8 @@ desc.sort = Descending
 asc.sort = Ascending
 sort = Sort by cost: 
 save = Save all tariff into PDF file
+invalid.service.format = Please entry tariff's service
+invalid.tariff.name = Please entry tariff's name!
+invalid.service.name = Please entry service's name!
+login.booked = This login has already booked
+empty.option = Please entry tariff's options
